--- a/app/src/main/res/layout/item_article_content.xml
+++ b/app/src/main/res/layout/item_article_content.xml
@@ -15,74 +15,97 @@
     </data>
 
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/relativeLayout"
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:clickable="false"
-        android:onClick="@{() -> listener.onOptionClick(item)}">
+        android:layout_marginHorizontal="@dimen/dimen_4dp"
+        android:padding="2dp"
+        app:cardCornerRadius="@dimen/dimen_8dp"
+        app:cardElevation="@dimen/dimen_8dp">
 
-        <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/item_image"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginStart="8dp"
-            android:scaleType="centerCrop"
-            app:glideUrl="@{item.mediaUrl}"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:shapeAppearanceOverlay="@style/ImageView.Rounded" />
-
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/item_title"
-            android:layout_width="0dp"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/relativeLayout"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:ellipsize="end"
-            android:lines="1"
-            android:maxLines="1"
-            android:text="@{item.title}"
-            app:layout_constraintBottom_toTopOf="@+id/item_des"
-            app:layout_constraintEnd_toStartOf="@+id/right_arrow"
-            app:layout_constraintStart_toEndOf="@id/item_image"
-            app:layout_constraintTop_toTopOf="@id/item_image"
-            tools:text="Test Title" />
+            android:clickable="false"
+            android:onClick="@{() -> listener.onOptionClick(item)}">
 
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/item_des"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:ellipsize="end"
-            android:lines="1"
-            android:maxLines="1"
-            android:text="@{item.byline}"
-            app:layout_constraintBottom_toBottomOf="@+id/item_image"
-            app:layout_constraintEnd_toEndOf="@+id/item_title"
-            app:layout_constraintStart_toStartOf="@+id/item_title"
-            app:layout_constraintTop_toBottomOf="@+id/item_title"
-            tools:text="Sub Text" />
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/item_image"
+                android:layout_width="@dimen/img_size"
+                android:layout_height="@dimen/img_size"
+                android:layout_marginStart="@dimen/dimen_8dp"
+                android:scaleType="centerCrop"
+                app:glideUrl="@{item.mediaUrl}"
+                app:layout_constraintBottom_toBottomOf="@+id/item_des"
+                app:layout_constraintDimensionRatio="1"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/item_title"
+                app:shapeAppearanceOverlay="@style/ImageView.Rounded" />
 
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/item_date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:drawableStart="@android:drawable/ic_menu_my_calendar"
-            app:layout_constraintEnd_toEndOf="@+id/item_des"
-            app:layout_constraintEnd_toStartOf="@+id/right_arrow"
-            app:layout_constraintTop_toBottomOf="@+id/item_des"
-            android:text="@{item.publishedDate}"
-            tools:text="10.11.2021" />
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/item_title"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/dimen_8dp"
+                android:layout_marginTop="@dimen/dimen_8dp"
+                android:ellipsize="end"
+                android:lines="2"
+                android:maxLines="2"
+                android:text="@{item.title}"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/item_des"
+                app:layout_constraintEnd_toStartOf="@+id/right_arrow"
+                app:layout_constraintStart_toEndOf="@id/item_image"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="Test Title" />
 
-        <ImageView
-            android:id="@+id/right_arrow"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_arrow_right" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/item_des"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dimen_4dp"
+                android:ellipsize="end"
+                android:lines="1"
+                android:maxLines="1"
+                android:text="@{item.byline}"
+                app:layout_constraintBottom_toBottomOf="@+id/item_image"
+                app:layout_constraintEnd_toEndOf="@+id/item_title"
+                app:layout_constraintStart_toStartOf="@+id/item_title"
+                app:layout_constraintTop_toBottomOf="@+id/item_title"
+                tools:text="Sub Text" />
+
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_marginEnd="@dimen/dimen_8dp"
+                android:scaleType="fitXY"
+                android:src="@drawable/ic_calendar"
+                app:layout_constraintBottom_toBottomOf="@+id/item_date"
+                app:layout_constraintDimensionRatio="1"
+                app:layout_constraintEnd_toStartOf="@+id/item_date"
+                app:layout_constraintTop_toTopOf="@+id/item_date" />
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/item_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="@dimen/dimen_4dp"
+                android:text="@{item.publishedDate}"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="@+id/item_des"
+                app:layout_constraintEnd_toStartOf="@+id/right_arrow"
+                app:layout_constraintTop_toBottomOf="@+id/item_des"
+                tools:text="10.11.2021" />
+
+            <ImageView
+                android:id="@+id/right_arrow"
+                android:layout_width="@dimen/img_size"
+                android:layout_height="@dimen/img_size"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/ic_chevron_right" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
 </layout>
